# cookiecutter-pyproject

./: .editorconfig  .flake8  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  cookiecutter.json  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md
.github/workflows/: tests.yml
docs/: development-instructions.md  project-structure.md  tool-choices.md
hooks/: post_gen_project.py  pre_gen_project.py  upgrade_utils.py  utils.py
scripts/: check-style.sh  clean.sh  generate.sh  test-e2e.sh  test-integration.sh  test-unit.sh
scripts/include/: vars.sh
tests/: test_e2e.py  test_generator.py
tests/e2e/: test_e2e.py
tests/integration/: test_generator.py
tests/unit/: test_pre_gen_project.py
{{cookiecutter.__project_name_kebab_case}}/: .flake8  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
{{cookiecutter.__project_name_kebab_case}}/.github/: PULL_REQUEST_TEMPLATE.md
{{cookiecutter.__project_name_kebab_case}}/.github/ISSUE_TEMPLATE/: BUG_REPORT.md  GENERAL_QUESTIONS.md
{{cookiecutter.__project_name_kebab_case}}/.github/workflows/: tests.yml
{{cookiecutter.__project_name_kebab_case}}/docs/: development-instructions.md  project-structure.md
{{cookiecutter.__project_name_kebab_case}}/scripts/: clean.sh  fix-style.sh  upgrade-project.sh
{{cookiecutter._project_name_kebab_case}}/: .flake8  pyproject.toml  setup.py
{{cookiecutter._project_name_kebab_case}}/{{cookiecutter._project_name_snake_case}}/: __main__.py
{{cookiecutter._project_name_kebab_case}}/{{cookiecutter._project_name_snake_case}}/cli/: entrypoint.py
{{cookiecutter.project_name_kebab_case}}/: .flake8  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  requirementstxt  setup.py
{{cookiecutter.project_name_kebab_case}}/.github/ISSUE_TEMPLATE/: FEATURE_REQUEST.md
{{cookiecutter.project_name_kebab_case}}/.github/workflows/: release.yml  tests.yml
{{cookiecutter.project_name_kebab_case}}/docs/: first-time-setup.md  project-structure.md
{{cookiecutter.project_name_kebab_case}}/scripts/: test-unit.sh
{{cookiecutter.project_name_kebab_case}}/scripts/include/: vars.sh
{{cookiecutter.project_name_kebab_case}}/tests/: test_{{cookiecutter.project_name_snake_case}}.py
{{cookiecutter.project_name_kebab_case}}/tests/integration/: test_{{cookiecutter.project_name_snake_case}}.py
{{cookiecutter.project_name_kebab_case}}/tests/unit/: test_{{cookiecutter.project_name_snake_case}}.py
{{cookiecutter.project_name_kebab_case}}/{{cookiecutter.project_name_snake_case}}/: __init__.py  __main__.py
{{cookiecutter.project_repo}}/: LICENSE  Makefile  README.md  pyproject.toml
{{cookiecutter.project_repo}}/.github/workflows/: tests.yml
