[project]
authors = [
  {name = "Ali Hajimirza (ali92hm)", email = "ali@alihm.net"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = []
description = "A cookiecutter for generating a basic scaffolding for python projects"
keywords = ["cookiecutter", "python", "project", "generator"]
license = {file = "LICENSE"}
maintainers = [
  {name = "Ali Hajimirza (ali92hm)", email = "ali@alihm.net"},
]
name = "cookiecutter-pyproject"
readme = "README.md"
requires-python = ">=3.7"
version = "0.1.0"

[project.urls]
changelog = "github.com/ali92hm/cookiecutter-pyproject/blob/master/CHANGELOG.md"
documentation = "github.com/ali92hm/cookiecutter-pyproject/blob/master/README.md"
homepage = "https://github.com/ali92hm/cookiecutter-pyproject"
repository = "https://github.com/ali92hm/cookiecutter-pyproject"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=65",
  "wheel>=0.37",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = []

[tool.isort]
multi_line_output = 3
profile = "black"
skip = [".generated", "{{cookiecutter.__project_name_kebab_case}}"]

[tool.pytest.ini_options]
addopts = "--basetemp=.generated --keep-baked-projects"
testpaths = [
  "tests",
]

[tool.black]
exclude = '''
/(
|dist
|docs
|.generated
|{{cookiecutter.__project_name_kebab_case}}
)/
'''
target-version = ['py39']

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
exclude = "{{cookiecutter.__project_name_kebab_case}}/"
follow_imports = "silent"
ignore_missing_imports = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_errors = true
module = "tests.*"
