[project]
authors = [
  {name = "{{ cookiecutter.author_full_name }}", email = "{{ cookiecutter.author_email }}"},
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Operating System :: OS Independent",
  {% if cookiecutter.license != 'Not open source' %}"{{ cookiecutter._pypi_license_map[cookiecutter.license] }}",
  {% endif -%}
  "Typing :: Typed",
]

dependencies = [
  # fill me
]
description = "{{ cookiecutter.project_description }}"
keywords = [
  # fill me
]
{% if cookiecutter.license != 'Not open source' -%}license = {file = "LICENSE"}
{% endif -%}
maintainers = [
  {name = "{{ cookiecutter.author_full_name }}", email = "{{ cookiecutter.author_email }}"},
]
name = "{{ cookiecutter.__project_name_kebab_case }}"
readme = "README.md"
requires-python = ">=3.7"
version = "0.1.0"

[project.urls]
changelog = "{{ cookiecutter.project_repo }}/blob/master/CHANGELOG.md"
documentation = "{{ cookiecutter.project_repo }}/blob/master/README.md"
homepage = "{{ cookiecutter.project_repo }}"
repository = "{{ cookiecutter.project_repo }}"

[project.scripts]
{{ cookiecutter.__project_name_kebab_case }} = "{{ cookiecutter.__project_name_snake_case }}.cli.entrypoint:main"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=65",
  "wheel>=0.38",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = []

[tool.isort]
multi_line_output = 3
profile = "black"
skip = []

[tool.pytest.ini_options]
testpaths = [
  "tests",
]

[tool.black]
exclude = '''
/(
|dist
|docs
)/
'''
target-version = ['py39']

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_errors = true
module = "tests.*"
