[project]
authors = [
  {name = "{{ cookiecutter.author_full_name }}", email = "{{ cookiecutter.author_email }}"},
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Operating System :: OS Independent",
  {% if cookiecutter.license == 'MIT License' -%}
  "License :: OSI Approved :: MIT License",
  {%- elif cookiecutter.license == 'BSD 2-Clause License' -%}
  "License :: OSI Approved :: BSD License",
  {%- elif cookiecutter.license == 'BSD 3-Clause License' -%}
  "License :: OSI Approved :: BSD License",
  {%- elif cookiecutter.license == 'ISC License' -%}
  "License :: OSI Approved :: ISC License (ISCL)",
  {%- elif cookiecutter.license == 'Apache License Version 2.0' -%}
  "License :: OSI Approved :: Apache Software License",
  {%- elif cookiecutter.license == 'GNU General Public License Version 3' -%}
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  {%- elif cookiecutter.license == 'Unlicense' -%}
  "License :: OSI Approved :: The Unlicense (Unlicense)",
  {%- endif %}
  "Typing :: Typed",
]

dependencies = [
  # fill me
]
description = "{{ cookiecutter.project_description }}"
keywords = [
  # fill me
]
license = {file = "LICENSE"}
maintainers = [
  {name = "{{ cookiecutter.author_full_name }}", email = "{{ cookiecutter.author_email }}"},
]
name = "{{ cookiecutter.project_name_kebab_case }}"
readme = "README.md"
requires-python = ">=3.7"
version = "0.1.0"

[project.urls]
changelog = "{{ cookiecutter.project_repo }}/blob/master/CHANGELOG.md"
documentation = "{{ cookiecutter.project_repo }}/blob/master/README.md"
homepage = "{{ cookiecutter.project_repo }}"
repository = "github.com"

[project.entry-points]
{{ cookiecutter.project_name_kebab_case }} = "{{ cookiecutter.project_name_snake_case }}.cli.entrypoint:main"

[project.gui-scripts]

[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=57",
  "toml>=0.10",
  "wheel>=0.36",
]

[tool.isort]
multi_line_output = 3
profile = "black"
skip = ""

[tool.pytest.ini_options]
testpaths = [
  "tests",
]

[tool.black]
exclude = '''
/(
|dist
|docs
)/
'''
target-version = ['py39']

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = true
no_implicit_reexport = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_errors = true
module = "tests.*"
